feat: apply dark theme and backend configuration